Modernize test/CI harness

--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "@segment/to-iso-string",
-  "repository": "segmentio/to-iso-string",
-  "version": "0.0.2",
-  "license": "MIT",
   "description": "Cross-browser toISOString support.",
+  "version": "1.0.0",
   "keywords": [
     "iso",
     "format",
@@ -12,7 +10,37 @@
     "isostring",
     "toISOString"
   ],
+  "main": "lib/index.js",
+  "scripts": {
+    "test": "make test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/segmentio/to-iso-string.git"
+  },
+  "author": "Segment <friends@segment.com>",
+  "license": "SEE LICENSE IN LICENSE",
+  "bugs": {
+    "url": "https://github.com/segmentio/to-iso-string/issues"
+  },
+  "homepage": "https://github.com/segmentio/to-iso-string#readme",
   "devDependencies": {
-    "mocha": "*"
+    "@segment/eslint-config": "^3.0.0",
+    "browserify": "^13.0.0",
+    "browserify-istanbul": "^2.0.0",
+    "eslint": "^2.9.0",
+    "istanbul": "^0.4.3",
+    "karma": "^0.13.22",
+    "karma-browserify": "^5.0.4",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.0.0",
+    "karma-mocha": "^1.0.1",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sauce-launcher": "^1.0.0",
+    "karma-spec-reporter": "0.0.26",
+    "mocha": "^2.2.5",
+    "phantomjs-prebuilt": "^2.1.7",
+    "proclaim": "^3.4.1",
+    "watchify": "^3.7.0"
   }
 }
